--- a/estilos.css
+++ b/estilos.css
@@ -17,20 +17,89 @@ p{
 }
 
 .content{
-    background-color: aliceblue;
-    height: 40px;
-    padding-top: 20px;    
-    padding-left: 50px;
+    background-color: aliceblue;   
+    width: 80%;    
+    height: 300px;
+    margin: 50px auto; 
+    padding: 10px;  
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .texto{
+    display: inline-block;
     color: brown;
     font-size: 24px;
     text-decoration: none;
-    font-weight: bold;
-    margin-right: 50px;
+    font-weight: bold;    
+    background-color: burlywood;
+    padding: 10px 30px;
+}
+
+.texto:hover{
+    background-color: rosybrown;
 }
 
 iframe{
-    margin-left: 30%;
+    position: relative;
+    left: 350px;
+}
+
+.card{
+    background-color: aliceblue;
+    width: 30%;
+    position: relative;
+    left: 250px;    
+}
+
+.container2{
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 3px solid black;
+    position: relative;
+}
+
+[class^="box"]{
+    width: 50px;
+    height: 50px;
+}
+
+.box1{
+    border: 4px solid indianred;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.box2{
+    border: 4px solid blue;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+.box3{
+    border: 3px solid green;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+
+.box4{
+    border: 4px solid lightseagreen;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
+.box5{
+    border: 4px solid darkorange;
+    position: absolute;
+    top: 120px;
+    left: 120px;
 }
