--- a/estilos.css
+++ b/estilos.css
@@ -19,24 +19,28 @@ p{
 .content{
     background-color: aliceblue;   
     width: 80%;    
-    height: 300px;
+    height: 200px;
     margin: 50px auto; 
-    padding: 10px;  
+    padding: 10px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+    align-items: stretch;
 }
 
-.texto{
-    display: inline-block;
+.texto{    
     color: brown;
     font-size: 24px;
     text-decoration: none;
+    text-align: center;
     font-weight: bold;    
     background-color: burlywood;
-    padding: 10px 30px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    /*height: 50px;*/
+    width: 200px;
 }
 
 .texto:hover{
@@ -52,7 +56,7 @@ iframe{
     background-color: aliceblue;
     width: 30%;
     position: relative;
-    left: 250px;    
+    left: 400px;    
 }
 
 .container2{
@@ -64,20 +68,20 @@ iframe{
     position: relative;
 }
 
-[class^="box"]{
+[class^='box']{
     width: 50px;
     height: 50px;
 }
 
 .box1{
-    border: 4px solid indianred;
+    border: 3px solid rgb(252, 139, 158);
     position: absolute;
     top: 0px;
     left: 0px;
 }
 
 .box2{
-    border: 4px solid blue;
+    border: 3px solid blue;
     position: absolute;
     top: 0px;
     right: 0px;
@@ -91,14 +95,14 @@ iframe{
 }
 
 .box4{
-    border: 4px solid lightseagreen;
+    border: 3px solid lightseagreen;
     position: absolute;
     bottom: 0px;
     right: 0px;
 }
 
 .box5{
-    border: 4px solid darkorange;
+    border: 3px solid darkorange;
     position: absolute;
     top: 120px;
     left: 120px;
